[package]
name = "ip-macro"
version = "0.1.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]

license = "MIT/Apache-2.0"
documentation = "https://docs.rs/ip-macro"
repository = "https://github.com/lfairy/ip-macro"
description = "Macros for writing literal IP addresses"
categories = ["network-programming", "rust-patterns"]

[dependencies]
quote = "0.3.15"
syn = "0.11.9"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "lfairy/ip-macro" }
